# xcode-index-mcp

./: .gitignore  .gooseHints  README.md  pyproject.toml
src/xcode_index_mcp/: __init__.py  __main__.py  server.py
swift-service/: Package.resolved  Package.swift
swift-service/Sources/: TCPServer.swift  main.swift
swift-service/Sources/Index/: IndexReader.swift  IndexStore.swift  Models.swift  SymbolProvider.swift  XcodePath.swift
swift-service/Tests/IndexStoreMCPServiceTests/: IndexStoreMCPServiceTests.swift  MockIndexReader.swift  MockSymbolManager.swift  MockSymbolProvider.swift  SymbolProviderTests.swift  TCPServerTests.swift
