[project]
name = "xcode-index-mcp"
version = "0.1.0"
description = "Browse Xcode project indexes via MCP"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]~=1.4.1",
    "requests~=2.32.3",
]

[project.scripts]
xcode-index-mcp = "xcode_index_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"